--- a/index.html
+++ b/index.html
@@ -12,22 +12,49 @@
 </head>
 <body>
     <main>
-        <section id="header-container">
+        <section class="header-container background-green">
             <div id="header">
                 <h1>The Dev News</h1>
             </div>
         </section>
 
-        <section class="container">
+        <div class="container">
             <div class="opinion">
-               
+                <div class="text">
+                    <p>opinião</p>
+                    <h2>Como é ser um desenvolvedor</h2>
+                    <h4> <b>By</b> Fabio Tetsuo</h4>
+                </div>
             </div>
             <div class="section-side-card">
-
+                <div class="title-section background-green">
+                    <h3 class="posts">Posts Populares</h3>
+                </div>
+                <div class="card">
+                    <img src="./assets/girl-desk.jpeg" alt="">
+                    <div>
+                        <h3>Desenvolvimento atual</h3>
+                        <p>22 Agosto 2022</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/gitlab.jpeg" alt="">
+                    <div>
+                        <h3>GitLab bs Github</h3>
+                        <p>22 Agosto 2022</p>  
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/café.jpeg" alt="">
+                    <div>
+                        <h3>Café Atrapalha?</h3>
+                        <p>22 Agosto 2022</p>
+                    </div>
+                </div>  
             </div>
-        </section>
+        </div>
 
-        <footer class="container background-green">
+        <footer class="footer-container background-green">
             <section class="footer">
                 <p>Copyright@The Dev News</p>
             </section>
