created section-2 and adjust the code

--- a/index.html
+++ b/index.html
@@ -18,41 +18,65 @@
             </div>
         </section>
 
-        <div class="container">
-            <div class="opinion">
-                <div class="text">
-                    <p>opinião</p>
-                    <h2>Como é ser um desenvolvedor</h2>
-                    <h4> <b>By</b> Fabio Tetsuo</h4>
+        <section class="container">
+            <div class="section-1">
+                <div class="opinion">
+                    <div class="text">
+                        <p>opinião</p>
+                        <h2>Como é ser um desenvolvedor</h2>
+                        <h4> <b>By</b> Fabio Tetsuo</h4>
+                    </div>
+                </div>
+                <div class="section-side-card">
+                    <div class="title-section background-green">
+                        <h3 class="posts">Posts Populares</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/girl-desk.jpeg" alt="">
+                        <div>
+                            <h3>Desenvolvimento atual</h3>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/gitlab.jpeg" alt="">
+                        <div>
+                            <h3>GitLab bs Github</h3>
+                            <p>22 Agosto 2022</p>  
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/café.jpeg" alt="">
+                        <div>
+                            <h3>Café Atrapalha?</h3>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                    </div>  
                 </div>
             </div>
-            <div class="section-side-card">
-                <div class="title-section background-green">
-                    <h3 class="posts">Posts Populares</h3>
-                </div>
-                <div class="card">
-                    <img src="./assets/girl-desk.jpeg" alt="">
-                    <div>
-                        <h3>Desenvolvimento atual</h3>
-                        <p>22 Agosto 2022</p>
+        </section>
+
+        <section class="container">
+            <div class="section-2">
+                <div class="recent-post">
+                    <div class="recent-post-banner background-green">
+                        <h3>Posts mais recentes</h3> 
+                        <p>Ver todos</p>
+                    </div>
+                    <div class="recent-cards">
+
                     </div>
                 </div>
-                <div class="card">
-                    <img src="./assets/gitlab.jpeg" alt="">
-                    <div>
-                        <h3>GitLab bs Github</h3>
-                        <p>22 Agosto 2022</p>  
+                <div class="side-bar-categories">
+                    <div class="categories-banner background-green">
+                        <h3>Categorias</h3>
                     </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/café.jpeg" alt="">
-                    <div>
-                        <h3>Café Atrapalha?</h3>
-                        <p>22 Agosto 2022</p>
+                    <div class="categories">
+
                     </div>
-                </div>  
+                </div> 
             </div>
-        </div>
+        </section>
 
         <footer class="footer-container background-green">
             <section class="footer">
