--- a/index.html
+++ b/index.html
@@ -64,7 +64,38 @@
                         <p>Ver todos</p>
                     </div>
                     <div class="recent-cards">
-
+                        <div class="big-cards">
+                            <img src="./assets/phone.jpeg" alt="">
+                            <p>desenvolvimento</p>
+                            <h3>Desenvolvimento mobile</h3>
+                            <p><b>By</b> Fabio Tetsuo</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. In vitae urna commodo amet congue integer dapibus. Interdum semper mauris convallis fusce enim odio. Vitae montes ridiculus felis.</p>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                        <div class="big-cards">
+                            <img src="./assets/filming.jpeg" alt="">
+                            <p>saude</p>
+                            <h3>Balancear vida profissional e pessoal</h3>
+                            <p><b>By</b> Ridho Satriawan</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Et consectetur at consectetur sed nisl tempor.</p>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                        <div class="big-cards">
+                            <img src="./assets/vscode.jpeg" alt="">
+                            <p>desenvolvimento</p>
+                            <h3>Configurando VSCode</h3>
+                            <p><b>By</b> Fabio Tetsuo</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Erat interdum tortor ac sagittis id a etiam. Tellus vitae arcu dignissim massa aliquam vel tellus. Ipsum massa arcu nulla sed purus in ac.</p>
+                            <p>22 Agosto 2022</p>
+                        </div>
+                        <div class="big-cards">
+                            <img src="./assets/monitor.jpeg" alt="">
+                            <p>produtividade</p>
+                            <h3>2 monitores ou 1 ultrawide?</h3>
+                            <p><b>By</b> Fulano da Silva</p>
+                            <p>Lorem ipsum dolor sit amet consectetur. Arcu tellus adipiscing sagittis tristique. Eget molestie posuere enim pretium venenatis nunc ligula donec a. Velit senectus amet nulla.</p>
+                            <p>22 Agosto 2022</p>
+                        </div>
                     </div>
                 </div>
                 <div class="side-bar-categories">
