--- a/index.html
+++ b/index.html
@@ -11,124 +11,141 @@
     <title>The Dev News</title>
 </head>
 <body>
-    <section class="header-container background-green">
-        <div id="header">
-            <h1>The Dev News</h1>
+        <section class="header-container background-green">
+            <div id="header">
+                <h1>The Dev News</h1>
+            </div>
+        </section>
+        <div class="body">
+
+            <section class="container">
+                    <div class="section-1">
+                        <div class="opinion">
+                            <div class="text">
+                                <p>opinião</p>
+                                <h2>Como é ser um desenvolvedor</h2>
+                                <h4> <b>By</b> Fabio Tetsuo</h4>
+                            </div>
+                        </div>
+                        <div class="recent-post">
+                            <div class="recent-post-banner background-green">
+                                <h3>Posts mais recentes</h3> 
+                                <p>Ver todos</p>
+                            </div>
+                            <div class="recent-cards">
+                                <div class="big-cards">
+                                    <img src="./assets/phone.jpeg" alt="">
+                                    <div class="big-cards-text">
+                                        <p class="recent-post-type">desenvolvimento</p>
+                                        <h3>Desenvolvimento mobile</h3>
+                                        <p class="recent-post-by"><b>By</b> Fabio Tetsuo<p>
+                                        <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. In <br>
+                                            vitae urna commodo amet congue integer <br>
+                                            dapibus. Interdum semper mauris convallis <br>
+                                            fusce enim odio. Vitae montes ridiculus felis.</p>
+                                        <p>22 Agosto 2022</p>
+                                    </div>
+                                </div>
+                                <div class="big-cards">
+                                    <img src="./assets/filming.jpeg" alt="">
+                                    <div class="big-cards-text">
+                                        <p class="recent-post-type">saude</p>
+                                        <h3>Balancear vida profissional e <br>
+                                            pessoal</h3>
+                                        <p class="recent-post-by"><b>By</b> Ridho Satriawan</p>
+                                        <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Et <br>
+                                            consectetur at consectetur sed nisl tempor.</p>
+                                        <p>22 Agosto 2022</p>
+                                    </div>
+                                </div>
+                                <div class="big-cards">
+                                    <img src="./assets/vscode.jpeg" alt="">
+                                    <div class="big-cards-text">
+                                        <p class="recent-post-type">desenvolvimento</p>
+                                        <h3>Configurando VSCode</h3>
+                                        <p class="recent-post-by"><b>By</b> Fabio Tetsuo</p>
+                                        <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Erat <br>
+                                            interdum tortor ac sagittis id a etiam. Tellus <br>
+                                            vitae arcu dignissim massa aliquam vel tellus. <br>
+                                            Ipsum massa arcu nulla sed purus in ac.</p>
+                                        <p>22 Agosto 2022</p>
+                                    </div>
+                                </div>
+                                <div class="big-cards">
+                                    <img src="./assets/monitor.jpeg" alt="">
+                                    <div class="big-cards-text">
+                                        <p class="recent-post-type">produtividade</p>
+                                        <h3>2 monitores ou 1 ultrawide?</h3>
+                                        <p class="recent-post-by"><b>By</b> Fulano da Silva</p>
+                                        <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Arcu <br>
+                                            tellus adipiscing sagittis tristique. Eget <br>
+                                            molestie posuere enim pretium venenatis <br>
+                                            nunc ligula donec a. Velit senectus amet nulla.</p>
+                                        <p>22 Agosto 2022</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+            </section>
+    
+            <section class="container">
+                    <div class="section-2">
+                        <div class="section-side-card">
+                            <div class="title-section background-green">
+                                <h3 class="posts">Posts Populares</h3>
+                            </div>
+                            <div class="card">
+                                <img src="./assets/girl-desk.jpeg" alt="">
+                                <div>
+                                    <h3>Desenvolvimento atual</h3>
+                                    <p>22 Agosto 2022</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="./assets/gitlab.jpeg" alt="">
+                                <div>
+                                    <h3>GitLab bs Github</h3>
+                                    <p>22 Agosto 2022</p>  
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="./assets/café.jpeg" alt="">
+                                <div>
+                                    <h3>Café Atrapalha?</h3>
+                                    <p>22 Agosto 2022</p>
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="side-bar-categories">
+                            <div class="categories-banner background-green">
+                                <h3>Categorias</h3>
+                            </div>
+                            <div class="categories">
+                                <div class="categories-line">
+                                    <p>> saude</p>
+                                    <p>(1)</p>
+                                </div>
+                                <div class="categories-line">
+                                    <p>> desenvolvimento</p>
+                                    <p>(2)</p>
+                                </div>
+                                <div class="categories-line">
+                                    <p>> produtividade</p>
+                                    <p>(2)</p>
+                                </div>
+                                <div class="categories-line">
+                                    <p>> opiniao</p>
+                                    <p>(1)</p>
+                                </div>                                                       
+                            </div>
+                        </div> 
+                    </div>
+            </section>
         </div>
-    </section>
-    <main>
-        <section class="container">
-            <div class="section-1">
-                <div class="opinion">
-                    <div class="text">
-                        <p>opinião</p>
-                        <h2>Como é ser um desenvolvedor</h2>
-                        <h4> <b>By</b> Fabio Tetsuo</h4>
-                    </div>
-                </div>
-                <div class="section-side-card">
-                    <div class="title-section background-green">
-                        <h3 class="posts">Posts Populares</h3>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/girl-desk.jpeg" alt="">
-                        <div>
-                            <h3>Desenvolvimento atual</h3>
-                            <p>22 Agosto 2022</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/gitlab.jpeg" alt="">
-                        <div>
-                            <h3>GitLab bs Github</h3>
-                            <p>22 Agosto 2022</p>  
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/café.jpeg" alt="">
-                        <div>
-                            <h3>Café Atrapalha?</h3>
-                            <p>22 Agosto 2022</p>
-                        </div>
-                    </div>  
-                </div>
-            </div>
-        </section>
-
-        <section class="container">
-            <div class="section-2">
-                <div class="recent-post">
-                    <div class="recent-post-banner background-green">
-                        <h3>Posts mais recentes</h3> 
-                        <p>Ver todos</p>
-                    </div>
-                    <div class="recent-cards">
-                        <div class="big-cards">
-                            <img src="./assets/phone.jpeg" alt="">
-                            <div class="big-cards-text">
-                                <p class="recent-post-type">desenvolvimento</p>
-                                <h3>Desenvolvimento mobile</h3>
-                                <p class="recent-post-by"><b>By</b> Fabio Tetsuo<p>
-                                <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. In <br>
-                                    vitae urna commodo amet congue integer <br>
-                                    dapibus. Interdum semper mauris convallis <br>
-                                    fusce enim odio. Vitae montes ridiculus felis.</p>
-                                <p>22 Agosto 2022</p>
-                            </div>
-                        </div>
-                        <div class="big-cards">
-                            <img src="./assets/filming.jpeg" alt="">
-                            <div class="big-cards-text">
-                                <p class="recent-post-type">saude</p>
-                                <h3>Balancear vida profissional e <br>
-                                    pessoal</h3>
-                                <p class="recent-post-by"><b>By</b> Ridho Satriawan</p>
-                                <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Et <br>
-                                    consectetur at consectetur sed nisl tempor.</p>
-                                <p>22 Agosto 2022</p>
-                            </div>
-                        </div>
-                        <div class="big-cards">
-                            <img src="./assets/vscode.jpeg" alt="">
-                            <div class="big-cards-text">
-                                <p class="recent-post-type">desenvolvimento</p>
-                                <h3>Configurando VSCode</h3>
-                                <p class="recent-post-by"><b>By</b> Fabio Tetsuo</p>
-                                <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Erat <br>
-                                    interdum tortor ac sagittis id a etiam. Tellus <br>
-                                    vitae arcu dignissim massa aliquam vel tellus. <br>
-                                    Ipsum massa arcu nulla sed purus in ac.</p>
-                                <p>22 Agosto 2022</p>
-                            </div>
-                        </div>
-                        <div class="big-cards">
-                            <img src="./assets/monitor.jpeg" alt="">
-                            <div class="big-cards-text">
-                                <p class="recent-post-type">produtividade</p>
-                                <h3>2 monitores ou 1 ultrawide?</h3>
-                                <p class="recent-post-by"><b>By</b> Fulano da Silva</p>
-                                <p class="recent-post-fill">Lorem ipsum dolor sit amet consectetur. Arcu <br>
-                                    tellus adipiscing sagittis tristique. Eget <br>
-                                    molestie posuere enim pretium venenatis <br>
-                                    nunc ligula donec a. Velit senectus amet nulla.</p>
-                                <p>22 Agosto 2022</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="side-bar-categories">
-                    <div class="categories-banner background-green">
-                        <h3>Categorias</h3>
-                    </div>
-                    <div class="categories">
-
-                    </div>
-                </div> 
-            </div>
-        </section>
-    </main>
-    <footer class="footer-container background-green">    
-                <p>Copyright@The Dev News</p>
-    </footer>
+        <footer class="footer-container background-green">    
+            <p>Copyright@The Dev News</p>
+        </footer>
 </body>
 </html>
